finished dashboard layout, squashed a few bugs

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,15 +17,15 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   --radius: 0.625rem;
-  --background: oklch(0.9633 0.0318 155.29);
+  --background: oklch(0.9633 0.0318 135.29);
   --foreground: oklch(0.229 0.042 135.295);
   --card: oklch(1 0.0218 155.29);
   --card-foreground: oklch(0.229 0.042 135.295);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.129 0.042 135.295);
   --primary: oklch(0.208 0.042 135.29);
-  --primary-foreground: oklch(0.984 0.003 247.858);
-  --secondary: oklch(0.968 0.007 247.896);
+  --primary-foreground: oklch(0.984 0.003 136.28);
+  --secondary: oklch(0.8881 0.0833 135.28);
   --secondary-foreground: oklch(0.208 0.042 135.29);
   --muted: oklch(0.968 0.007 247.896);
   --muted-foreground: oklch(0.554 0.046 130.29);
@@ -94,7 +94,7 @@
   --card-foreground: oklch(0.984 0.003 247.858);
   --popover: oklch(0.208 0.042 129.2);
   --popover-foreground: oklch(0.984 0.003 247.858);
-  --primary: oklch(0.929 0.013 129.07);
+  --primary: oklch(0.9116 0.0537 129.07);
   --primary-foreground: oklch(0.208 0.042 129.2);
   --secondary: oklch(0.279 0.041 129.2);
   --secondary-foreground: oklch(0.984 0.003 247.858);
